<resources>
    <string name="app_name">Memory Game App</string>
    <string name="memory_game_title">Welcome to the Memory Game</string>
    <string name="memory_game_text">Memory Game</string>
    <string name="play_text">Play</string>
    <string name="rules_text">Rules</string>
    <string name="points">Points: </string>
    <string name="title_activity_game">GameActivity</string>
    <string name="victory">You are a winner!</string>
    <string name="victory_points">Your final score: </string>
    <string name="cheated">You cheated! It\'s okay, we still love you.</string>
    <string name="rules_text_top">You will be given 20 tiles to select from. There are 10 images available that each of two tiles will have.</string>
    <string name="rules_text_middle">You may select any two tiles. Touching a tile will show that tile\'s image. If the two tiles match, they will become check marks, otherwise they will turn face-down.</string>
    <string name="rules_text_bottom">Matching tiles gets you a point while mismatching loses you a point. Good luck and have fun\!</string>
</resources>