<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_margin">
    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/memory_game_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/default_margin" />

    <LinearLayout
        android:id="@+id/top_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/title_text">
        <Button
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_text"
            android:layout_marginBottom="@dimen/default_margin"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/rules_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rules_text"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</RelativeLayout>